--- a/ligand.htm
+++ b/ligand.htm
@@ -4,9 +4,8 @@
 		<meta charset="UTF-8" />
 		
 <!--
-	PROTEIN THERMODYNAMICS SIMULATIONS: Ligand binding simulation
-	Copyright (C) 2021–2023 Johan Pääkkönen, Juha Rouvinen, University of Eastern Finland
-	
+	Ligand binding simulation
+
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
 	as published by the Free Software Foundation; either version 2
@@ -171,7 +170,6 @@
 		</main>
 		<footer>
 			<hr />
-			<p id="ext_extmessage">For some extra features not described in the original paper, append <a class="ext_codeword" href="?ext">?ext</a> to the URL.<br />
 				This option will be retained in intra-site links, and it can be saved in a bookmark.<br />
 				Description of the extra features: <a href="extensions.htm">extensions</a></p>
 			<h2>Other pages</h2>
@@ -185,9 +183,8 @@
 				<a href="homodimer.htm">Protein homodimerisation simulation</a>
 			</nav>
 			<div id="Inspired by">
-				Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen and their paper<br />
-				<a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
-			</div>
+				Shamelessly Inspired by Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen, and Markus Seeliger<br />
+				<a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />			</div>
 		</footer>
 		<script>preinit(appmode_ligand);</script>
 	</body>
