--- a/ligands.htm
+++ b/ligands.htm
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8" />
 		
 <!--
-	Competing ligands simulation
+	PROTEIN THERMODYNAMICS SIMULATIONS: Competing ligands simulation
+	Copyright (C) 2021–2023 Johan Pääkkönen, Juha Rouvinen, University of Eastern Finland
 	
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
@@ -197,6 +198,7 @@
 		</main>
 		<footer>
 			<hr />
+			<p id="ext_extmessage">For some extra features not described in the original paper, append <a class="ext_codeword" href="?ext">?ext</a> to the URL.<br />
 				This option will be retained in intra-site links, and it can be saved in a bookmark.<br />
 				Description of the extra features: <a href="extensions.htm">extensions</a></p>
 			<h2>Other pages</h2>
@@ -210,7 +212,7 @@
 				<a href="homodimer.htm">Protein homodimerisation simulation</a>
 			</nav>
 			<div id="Inspired by">
-				Shamelessly inspired by Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen and their paper<br />
+				Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen and their paper<br />
 				<a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
 			</div>
 		</footer>
