--- a/ligands.htm
+++ b/ligands.htm
@@ -4,8 +4,7 @@
 		<meta charset="UTF-8" />
 		
 <!--
-	PROTEIN THERMODYNAMICS SIMULATIONS: Competing ligands simulation
-	Copyright (C) 2021–2023 Johan Pääkkönen, Juha Rouvinen, University of Eastern Finland
+	BINDING SIMULATIONS: Competing ligands simulation
 	
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
@@ -29,7 +28,7 @@
 -->
 
 <!--
-	If you use this in your own research, please cite our paper: https://doi.org/10.1021/acsomega.2c00560
+	If you use this in your own research, please cite: https://doi.org/10.1021/acsomega.2c00560
 -->
 		
 		<title>Competing ligands simulation</title>
@@ -212,7 +211,7 @@
 				<a href="homodimer.htm">Protein homodimerisation simulation</a>
 			</nav>
 			<div id="Inspired by">
-				Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen and their paper<br />
+				Shamelessly Inspired by Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen, and Markus Seeliger<br />
 				<a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
 			</div>
 		</footer>
